--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "@bem-react/classname": "^1.6.0",
+    "antd": "^5.23.1",
     "classname": "^0.0.0",
     "merge-change": "^1.8.1",
     "react": "^18.3.1",
