--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "antd": "^5.23.1",
     "classname": "^0.0.0",
     "merge-change": "^1.8.1",
+    "playwright": "^1.49.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.2",
